gitops/espresso/apps/smtp-edge/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smtp-edge
  labels:
    pod-security.kubernetes.io/enforce: baseline
